# token-filtering

./: .gitignore  README.md  adversarial-finetune.py  chat-train.py  instruct.py  model.py  paths.py  pyproject.toml  refusal-train.py  train.py  unlearn.py
analysis/: accuracy-scaling.py  adversarial-finetune-analysis.py  colors.py  compute-accuracy-sweep-threshold.py  delayed-scaling.py  docfilter-threshold-scaling.py  document-medical-pct.py  eval-alpaca.py  eval-multimedqa.py  eval-refusals.py  eval_utils.py  generate-thresholds.py  hparam.py  label-sweep-accuracy.py  label-sweep-scaling.py  layers-two-way.py  layers.py  mmlu.py  noise-scaling.py  plot-alpaca.py  plot-multimedqa.py  plot-refusals.py  probe-data-scaling.py  probe-scaling.py  sample-alpaca.py  sample-multimedqa-responses.py  sample-multimedqa.py  sample-refusals.py  scaling.py  threshold-scaling.py
config/: accuracy-sweep.py  bidir-sweep.py  delayed-filter-sweep.py  fixed-accuracy-sweep.py  label-sweep.py  param-sweep.py  roberta.yaml  roberta_sweep.py  scaling-sweep.py  template.yaml  threshold-sweep.py
data/: annotate.py  filter.py  probe.yaml  retokenize.py  roberta.py  roberta.yaml  sweep_threshold.py  tiktokenizer.py  train-probe.py
data/med/: document_prompt.txt  generate-probe-corpus.py  generate-test.py  label-corpus.py  mmlu_prompt.txt  prepare-bidir-corpus.py  refusals.txt  sentence_prompt.txt
data/med/sae/: compute_thresholds.py  explain.py  get-medical.py  label-corpus.py  prompt.txt  retokenize.py  verify-labels.py  visualize-scores.py
data/med/test-sets/: annotate-docs-batch.py  (+4 more)
